<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/editProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="130dp"
            android:text="@string/EditProfile"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/imageCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/editProfileTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/myImageCircularImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"
            tools:layout_editor_absoluteX="112dp"
            />
        </LinearLayout>

        <ImageButton
            android:id="@+id/myImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="188dp"
            android:background="@null"
            android:src="@drawable/ic_camera_alt_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/firstNameTI"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstNameTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCardView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/FirstName"
                android:padding="5dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/middleNameTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstNameTI">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/middleNameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/MiddleName"
                android:padding="5dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastNameTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/middleNameTI">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/LastName"
                android:padding="5dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/jobTitleTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastNameTI">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/jobTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/JobTitle"
                android:padding="5dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/organizationTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobTitleTI">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/organizationEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/Organization"
                android:padding="5dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/countryTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/organizationTI">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/countryEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/Country"
                android:padding="5dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/countryTI">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/dateBtnID"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_calendar"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTI" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/DateOfBirth"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/genderLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTI" />

        <LinearLayout
            android:id="@+id/genderLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_marginLeft="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateBtnID">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Gender"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <RadioGroup
                android:layout_width="220dp"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:orientation='horizontal'
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="675dp">

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/Female" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Male" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/ripple_btn"
            android:text="@string/Update"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderLinearLayout" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>